// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rebuildSpec > produces a deterministic spec for the full fixture (snapshot) 1`] = `
"# Build Spec

_Generated by the Builder from interview answers._

## 1. Problem and users
- **Pitch**: A study-prep app for medical residents.
- **Expected scale (year 1)**: under 5k in year 1

## 2. Scope

**Top user flows (in priority order):**
- Sign up and choose a board
- Upload past-exam PDFs
- Daily question stack with timer
- Review wrong answers with explanations
- Progress dashboard

## 3. Core flows (Given/When/Then)

_Acceptance criteria captured at this stage:_

Per flow: signup completes within 2 steps; upload PDF parses without manual cleanup; daily question stack always has 20 items; reviews show explanation immediately; dashboard reflects last session within 1 minute.

## 4. Data model

_Captured later in the interview (not yet emitted)._

## 5. Integrations
- Stripe
- Anthropic
- Postmark
- Sentry

## 6. Non-functional requirements
- **Accessibility**: yes, WCAG 2.2 AA
- **Performance targets**: kit defaults
- **Test strategy**: smoke + critical paths
- **Telemetry / privacy**: Sentry opt-in only after first build
- **Cost ceiling**: 5 GBP per build day
- **i18n / locales**: no (en-GB)

## 7. Active kit rules (from decision table)
- **B22** activated by Q6: "yes, nightly spaced-repetition recompute jobs"
- **B23** activated by Q6: "yes, nightly spaced-repetition recompute jobs"
- **B24** activated by Q6: "yes, nightly spaced-repetition recompute jobs"
- **B28** activated by Q8: "yes, users upload PDFs of past exam questions"
- **B3** activated by Q9: "yes"
- **F12** activated by Q14: "yes, WCAG 2.2 AA"
- **F13** activated by Q14: "yes, WCAG 2.2 AA"
- **F14** activated by Q14: "yes, WCAG 2.2 AA"
- **F15** activated by Q14: "yes, WCAG 2.2 AA"
- **F16** activated by Q14: "yes, WCAG 2.2 AA"
- **F17** activated by Q14: "yes, WCAG 2.2 AA"
- **F18** activated by Q14: "yes, WCAG 2.2 AA"
- **O18** activated by Q9: "yes"

## 8. Interview progress
- Fast-path questions answered: **28 / 28**
- All fast-path questions answered. Ready to start build (subject to Echo-back).

---

_28 answers recorded._
"
`;

exports[`rebuildSpec > produces a deterministic spec for the minimal fixture (snapshot) 1`] = `
"# Build Spec

_Generated by the Builder from interview answers._

## 1. Problem and users
- **Pitch**: A platform that helps small charities manage their volunteers.
- **Expected scale (year 1)**: _(not yet answered)_

## 2. Scope

**Top user flows (in priority order):**
- _(not yet answered)_

## 3. Core flows (Given/When/Then)

_Acceptance criteria captured at this stage:_

_(no acceptance criteria captured yet)_

## 4. Data model

_Captured later in the interview (not yet emitted)._

## 5. Integrations
- _(not yet answered)_

## 6. Non-functional requirements
- **Accessibility**: _(not yet answered)_
- **Performance targets**: _(not yet answered)_
- **Test strategy**: _(not yet answered)_
- **Telemetry / privacy**: _(not yet answered)_
- **Cost ceiling**: _(not yet answered)_
- **i18n / locales**: _(not yet answered)_ (default locale)

## 7. Active kit rules (from decision table)
- _(no rules activated yet)_

## 8. Interview progress
- Fast-path questions answered: **1 / 28**
- Outstanding fast-path questions:
  - Q2 (user accounts)
  - Q3 (payments)
  - Q4 (marketplace)
  - Q5 (ai)
  - Q6 (background jobs)
  - Q7 (webhooks)
  - Q8 (file uploads)
  - Q9 (pii / gdpr)
  - Q10 (auth model)
  - Q11 (scale)
  - Q12 (design)
  - Q13 (platforms)
  - Q14 (accessibility)
  - Q15 (core flows)
  - Q16 (acceptance criteria)
  - Q17 (integrations)
  - Q18 (tenancy)
  - Q19 (pricing)
  - Q20 (stack constraints)
  - Q21 (performance)
  - Q22 (test strategy)
  - Q23 (telemetry)
  - Q24 (cost ceiling)
  - Q25 (build methodology)
  - Q26 (i18n)
  - Q27 (locales)
  - Q28 (destructive actions)

---

_1 answers recorded._
"
`;

exports[`rebuildSpec > produces a deterministic spec for the partial fixture (snapshot) 1`] = `
"# Build Spec

_Generated by the Builder from interview answers._

## 1. Problem and users
- **Pitch**: A study-prep app for medical residents preparing for board exams.
- **Expected scale (year 1)**: under-1k for v1 beta

## 2. Scope

**Top user flows (in priority order):**
- _(not yet answered)_

## 3. Core flows (Given/When/Then)

_Acceptance criteria captured at this stage:_

_(no acceptance criteria captured yet)_

## 4. Data model

_Captured later in the interview (not yet emitted)._

## 5. Integrations
- _(not yet answered)_

## 6. Non-functional requirements
- **Accessibility**: yes
- **Performance targets**: _(not yet answered)_
- **Test strategy**: _(not yet answered)_
- **Telemetry / privacy**: _(not yet answered)_
- **Cost ceiling**: _(not yet answered)_
- **i18n / locales**: _(not yet answered)_ (default locale)

## 7. Active kit rules (from decision table)
- **B3** activated by Q9: "yes"
- **F12** activated by Q14: "yes"
- **F13** activated by Q14: "yes"
- **F14** activated by Q14: "yes"
- **F15** activated by Q14: "yes"
- **F16** activated by Q14: "yes"
- **F17** activated by Q14: "yes"
- **F18** activated by Q14: "yes"
- **O18** activated by Q9: "yes"

## 8. Interview progress
- Fast-path questions answered: **4 / 28**
- Outstanding fast-path questions:
  - Q2 (user accounts)
  - Q3 (payments)
  - Q4 (marketplace)
  - Q5 (ai)
  - Q6 (background jobs)
  - Q7 (webhooks)
  - Q8 (file uploads)
  - Q10 (auth model)
  - Q12 (design)
  - Q13 (platforms)
  - Q15 (core flows)
  - Q16 (acceptance criteria)
  - Q17 (integrations)
  - Q18 (tenancy)
  - Q19 (pricing)
  - Q20 (stack constraints)
  - Q21 (performance)
  - Q22 (test strategy)
  - Q23 (telemetry)
  - Q24 (cost ceiling)
  - Q25 (build methodology)
  - Q26 (i18n)
  - Q27 (locales)
  - Q28 (destructive actions)

---

_4 answers recorded._
"
`;
